syntax = "proto3";

package product;

option go_package = "github.com/teesmart39/product-service/proto;productpb";

service ProductService {
  rpc CreateProduct(ProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc ListProducts(Empty) returns (ProductList);
}

message Product {
  string id = 1;
  string name = 2;
  float price = 3;
  string description = 4;
}

message ProductRequest {
  string name = 1;
  float price = 2;
  string description = 3;
}

message ProductResponse {
  string id = 1;
  string message = 2;
}

message GetProductRequest {
  string id = 1;
}

message ProductList {
  repeated Product products = 1;
}

message Empty {}
